# dynamic_fraction.h

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  dynamic_fraction.h  main.c  tests.c
.github/workflows/: ci.yml  verify-docs.sh
